# SceneBlueprint

./: .gitignore  LICENSE  README.md  SceneBlueprint-实现与迭代文档.md  SceneBlueprint-架构设计文档.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.githooks/: commit-msg
.github/workflows/: commit-policy.yml  docs-pages.yml  frontend-ci.yml  release-desktop.yml  tauri-host-ci.yml
.windsurf/: rules.md
Assets/Extensions/SceneBlueprint/: AI Director设计.md  Action与属性系统设计.md  C7_验收记录.md  Gizmo绘制管线设计.md  Playbook概念与示例.md  SceneBlueprint_Generalized_Platform_Architecture_PlanC.md  SceneBlueprint核心设计原则.md  SceneMarker系统设计.md  场景蓝图系统总体设计.md  数据导出与运行时契约.md  数据流节点系统设计.md  数据驱动模板系统设计.md  文档导航.md  框架优化分析与改进路线.md  波次刷怪系统重构设计.md  测试框架与质量保证.md  端口容量统一优化设计.md  节点激活语义与汇聚设计.md
docs/development/: GraphWorkspace-最小接口草案.md  README.md  SceneBlueprint-GitHub开发流程方案.md  SceneBlueprint-实现与迭代文档.md  SceneBlueprint-架构设计文档.md  phase-1-notes.md
docs/public/: README.md  _config.yml  index.md  releases.md
examples/: README.md
integrations/: README.md
schemas/: README.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  workspace.rs
src-tauri/src/errors/: app_error.rs
src-tauri/src/events/: app_events.rs  mod.rs
src-tauri/src/services/: app_service.rs  log_service.rs  menu_service.rs  mod.rs  workspace_service.rs
src-tauri/src/state/: app_state.rs
src/types/: dagre.d.ts  tinykeys.d.ts
tests/: README.md
toolchain/: README.md
(+419 files in other folders)
