[package]
name = "sceneblueprint"
version = "0.1.0"
description = "SceneBlueprint desktop shell"
authors = ["zgx197"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "sceneblueprint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
time = { version = "0.3", features = ["formatting"] }

